lab1/Test/L1-A-12-43.cmm
struct ss2b OOT9eyw , dS 

;
struct {
  int C3v2_KA ;
  int pEEM8EE38q ;
}HrJl7P_R5LrYpHfWzzw ( ) {
  float Edkz 944074124 ] , GnQL42F_6CVUM = z5XljGORAS1TXFjj1V7r 
    ;
  KJ6C8AnlRpUSxkhoR8uP = WsfrlCdo850pPd9i || ne && 
    E > $SQccicqY0CHO * JOgz7eBjD ( VQPitUv , qTjTS5ADCeTJW 
    + ! - sSqzDVofE [ MFMsiROU != CEpWl1QQKvOiCH - ( Jqnv107ZzP6SM4HVS9J 
    || hCGp == il4nRqG + c1S89cQc13yE * ( ZMrBsmI0CnjApiFNfr 
    = o_z2Bjy <= H6848BKUa * ! - ( CiDISG1qG >= - ! ! 
    ( v52jTGgeki_6i5H4D = wi9WvjuGH = bjdg3 < plA33B5_hadJ 
    ) ) ) * 893386611.1534014367 + NI8_jvB * 168727665 
    ) . ASruXKH5B5 / oIXptygclEe ( ) ] ) ;
}
int ;
int HFe10fIXmXAYmcXJrf ( int kuz5HH , struct YPztearg2Kv2sbA0 
  {
  struct y3 mht0ZTT1lcnxOeQsyHe0 ;
}ypIa ) {
}
int ;
int ;'
int ;
int q2d3crEmFiUC ( ) {
  wfZtN ;
  C3xI6QI6kGRZ01I6 ;
  p5Pd4Pzy7eUzjwn ;
  pP ;
  if ( jJ1CcoQuf )   if ( Df7 )   UxF53GeI ;
else {
    hXZJC178eEWbK2REc ;
    Ti8RBHAkmpsPIZ6p ;
    t ;
    WLInpJm ;
    Jjq4CreIN ;
    while ( OxTp )     zwS ;

  }
else   if ( w4hqBf7oQlc )   if ( Cu0SpoNZZrAZkPn ) 
      if ( lo3nBtWw1_Paa4Us )   return OfD2QPljBOX ;




}
